--- a/Spaceship_Titanic.ipynb
+++ b/Spaceship_Titanic.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +33,64 @@
         "id": "dxBeBwllSve-"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# pip installs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# import libraries"
+      ],
+      "metadata": {
+        "id": "QFmpN-PJUB_E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# read data"
+      ],
+      "metadata": {
+        "id": "katpLGf8TMh_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# pca"
+      ],
+      "metadata": {
+        "id": "EvJyjTAtTOVb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# knn"
+      ],
+      "metadata": {
+        "id": "GzBQyzFzTQH1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# neural net"
+      ],
+      "metadata": {
+        "id": "_EmSVKPBTTdy"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
