--- a/Spaceship_Titanic.ipynb
+++ b/Spaceship_Titanic.ipynb
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "QFmpN-PJUB_E"
       },
-      "execution_count": 68,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "katpLGf8TMh_"
       },
-      "execution_count": 77,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -137,7 +137,15 @@
         "if pcaComps == 2:\n",
         "  plt.scatter(pca_train[:, 0], pca_train[:, 1], c=y_train)\n",
         "plt.title(f\"PCA Visualization ({pcaComps} component)\")\n",
-        "plt.show()"
+        "plt.show()\n",
+        "\n",
+        "# Feature importance graphing\n",
+        "# todo\n",
+        "estimators=100 # todo: grid search me!\n",
+        "gbc = GradientBoostingClassifier(n_estimators=100)\n",
+        "gbc.fit(X_train, y_train)\n",
+        "# todo: render the important features\n",
+        "# look at my roommates code here: https://github.com/justincdavis/BowlGamesNN/blob/main/CFBowlGamesNN.ipynb"
       ],
       "metadata": {
         "id": "EvJyjTAtTOVb",
@@ -147,7 +155,7 @@
         },
         "outputId": "d61e252c-2159-47ca-93bf-01c116ce736b"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -216,14 +224,177 @@
     {
       "cell_type": "code",
       "source": [
-        "# neural net\n",
-        "# (try with reduced data and with full dataset)"
+        "# Neural network\n",
+        "\n",
+        "# Model parameters\n",
+        "activation = \"sigmoid\"\n",
+        "hiddenExpansionSize = 50\n",
+        "denseHiddenLayers = 3\n",
+        "autoencoderCompressionSize = 6\n",
+        "##################\n",
+        "\n",
+        "# Andrew's model arch notes:\n",
+        "# - do we progressively collapse when autoencoding or dense map straight to it?\n",
+        "# - mess around with dropout layers to reduce overfitting\n",
+        "\n",
+        "layers = []\n",
+        "layers.append(tf.keras.layers.Dense(hiddenExpansionSize, input_shape=(X.shape[1],), activation=activation, name=\"input\"))\n",
+        "for i in range(denseHiddenLayers):\n",
+        "  layers.append(tf.keras.layers.Dense(hiddenExpansionSize, activation=activation, name=f\"dense_{i}\"))\n",
+        "layers.append(tf.keras.layers.Dense(autoencoderCompressionSize, activation=activation, name=\"autoenc\"))\n",
+        "layers.append(tf.keras.layers.Dense(1, activation=activation, name=\"output\"))\n",
+        "\n",
+        "dnn = tf.keras.Sequential(layers)\n",
+        "dnn.build()\n",
+        "dnn.summary()\n",
+        "\n",
+        "nnDefaultWeights = dnn.get_weights()"
       ],
       "metadata": {
-        "id": "_EmSVKPBTTdy"
+        "id": "_EmSVKPBTTdy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10923358-6f5d-4ca8-9f12-1b62d66d2ac5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_11\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input (Dense)               (None, 50)                600       \n",
+            "                                                                 \n",
+            " dense_0 (Dense)             (None, 50)                2550      \n",
+            "                                                                 \n",
+            " dense_1 (Dense)             (None, 50)                2550      \n",
+            "                                                                 \n",
+            " dense_2 (Dense)             (None, 50)                2550      \n",
+            "                                                                 \n",
+            " autoenc (Dense)             (None, 6)                 306       \n",
+            "                                                                 \n",
+            " output (Dense)              (None, 1)                 7         \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 8,563\n",
+            "Trainable params: 8,563\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Neural network compilation and training\n",
+        "\n",
+        "# TRAINING PARAMETERS\n",
+        "learningRate = 0.001\n",
+        "epochs = 30\n",
+        "#####################\n",
+        "\n",
+        "optimizer = tf.keras.optimizers.Adam(learning_rate=learningRate)\n",
+        "\n",
+        "dnn.compile(optimizer, loss=\"mae\", metrics=[\"mae\", \"mse\"])\n",
+        "dnn.set_weights(nnDefaultWeights) # Reset if we already fit\n",
+        "\n",
+        "dnn.fit(X_train, y_train, batch_size=1000, epochs=epochs)\n",
+        "\n",
+        "nnMetrics = dnn.evaluate(X_test, y_test)\n",
+        "print(f\"NN evaluation metrics: {nnMetrics}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q_F-4vegAVE2",
+        "outputId": "d8e50429-3d94-4574-fb7e-8e184731ec14"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/30\n",
+            "7/7 [==============================] - 2s 13ms/step - loss: 0.4994 - mae: 0.4994 - mse: 0.2704\n",
+            "Epoch 2/30\n",
+            "7/7 [==============================] - 0s 12ms/step - loss: 0.4992 - mae: 0.4992 - mse: 0.2716\n",
+            "Epoch 3/30\n",
+            "7/7 [==============================] - 0s 10ms/step - loss: 0.4991 - mae: 0.4991 - mse: 0.2721\n",
+            "Epoch 4/30\n",
+            "7/7 [==============================] - 0s 9ms/step - loss: 0.4989 - mae: 0.4989 - mse: 0.2738\n",
+            "Epoch 5/30\n",
+            "7/7 [==============================] - 0s 13ms/step - loss: 0.4986 - mae: 0.4986 - mse: 0.2747\n",
+            "Epoch 6/30\n",
+            "7/7 [==============================] - 0s 12ms/step - loss: 0.4982 - mae: 0.4982 - mse: 0.2741\n",
+            "Epoch 7/30\n",
+            "7/7 [==============================] - 0s 12ms/step - loss: 0.4976 - mae: 0.4976 - mse: 0.2723\n",
+            "Epoch 8/30\n",
+            "7/7 [==============================] - 0s 13ms/step - loss: 0.4966 - mae: 0.4966 - mse: 0.2706\n",
+            "Epoch 9/30\n",
+            "7/7 [==============================] - 0s 10ms/step - loss: 0.4949 - mae: 0.4949 - mse: 0.2682\n",
+            "Epoch 10/30\n",
+            "7/7 [==============================] - 0s 12ms/step - loss: 0.4918 - mae: 0.4918 - mse: 0.2633\n",
+            "Epoch 11/30\n",
+            "7/7 [==============================] - 0s 10ms/step - loss: 0.4863 - mae: 0.4863 - mse: 0.2541\n",
+            "Epoch 12/30\n",
+            "7/7 [==============================] - 0s 12ms/step - loss: 0.4767 - mae: 0.4767 - mse: 0.2416\n",
+            "Epoch 13/30\n",
+            "7/7 [==============================] - 0s 10ms/step - loss: 0.4610 - mae: 0.4610 - mse: 0.2245\n",
+            "Epoch 14/30\n",
+            "7/7 [==============================] - 0s 8ms/step - loss: 0.4382 - mae: 0.4382 - mse: 0.2041\n",
+            "Epoch 15/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.4094 - mae: 0.4094 - mse: 0.1874\n",
+            "Epoch 16/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.3786 - mae: 0.3786 - mse: 0.1721\n",
+            "Epoch 17/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.3501 - mae: 0.3501 - mse: 0.1635\n",
+            "Epoch 18/30\n",
+            "7/7 [==============================] - 0s 7ms/step - loss: 0.3300 - mae: 0.3300 - mse: 0.1603\n",
+            "Epoch 19/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.3171 - mae: 0.3171 - mse: 0.1587\n",
+            "Epoch 20/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.3071 - mae: 0.3071 - mse: 0.1585\n",
+            "Epoch 21/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.3005 - mae: 0.3005 - mse: 0.1582\n",
+            "Epoch 22/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.2955 - mae: 0.2955 - mse: 0.1583\n",
+            "Epoch 23/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.2912 - mae: 0.2912 - mse: 0.1581\n",
+            "Epoch 24/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.2877 - mae: 0.2877 - mse: 0.1585\n",
+            "Epoch 25/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.2848 - mae: 0.2848 - mse: 0.1587\n",
+            "Epoch 26/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.2812 - mae: 0.2812 - mse: 0.1592\n",
+            "Epoch 27/30\n",
+            "7/7 [==============================] - 0s 7ms/step - loss: 0.2787 - mae: 0.2787 - mse: 0.1597\n",
+            "Epoch 28/30\n",
+            "7/7 [==============================] - 0s 7ms/step - loss: 0.2762 - mae: 0.2762 - mse: 0.1604\n",
+            "Epoch 29/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.2738 - mae: 0.2738 - mse: 0.1602\n",
+            "Epoch 30/30\n",
+            "7/7 [==============================] - 0s 6ms/step - loss: 0.2725 - mae: 0.2725 - mse: 0.1614\n",
+            "68/68 [==============================] - 0s 1ms/step - loss: 0.2820 - mae: 0.2820 - mse: 0.1727\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.2820208966732025, 0.2820208966732025, 0.17268192768096924]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     }
   ]
 }
