Fixed link in Colab for GH

--- a/Spaceship_Titanic.ipynb
+++ b/Spaceship_Titanic.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/suasuasuasuasua/CSCI470-Spaceship-Titanic/blob/main/Spaceship_Titanic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "dxBeBwllSve-",
         "colab": {
@@ -119,7 +130,7 @@
       "metadata": {
         "id": "QFmpN-PJUB_E"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +224,7 @@
       "metadata": {
         "id": "katpLGf8TMh_"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +261,7 @@
         },
         "outputId": "40083b46-0b48-4373-dcf0-524075007ec8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -279,7 +290,7 @@
       "metadata": {
         "id": "vcvjyOF_I8Bn"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +306,7 @@
       "metadata": {
         "id": "MLlUvc4JI8DT"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -306,7 +317,7 @@
       "metadata": {
         "id": "GzBQyzFzTQH1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,7 +330,7 @@
       "metadata": {
         "id": "dkIsRYbXJHhx"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +372,7 @@
         },
         "outputId": "64127b0c-ff9f-47cb-8b96-b4ea7910511f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +440,7 @@
       "metadata": {
         "id": "q_F-4vegAVE2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     }
   ]
