Added submission code for SVC + MI

--- a/Spaceship_Titanic.ipynb
+++ b/Spaceship_Titanic.ipynb
@@ -82,7 +82,7 @@
         "loadSeparateTestCsv = False\n",
         "\n",
         "# Set to true when we want to generate a submission for kaggle\n",
-        "testSubmission = False\n",
+        "testSubmission = True\n",
         "\n",
         "# Common utility functions\n",
         "def checkNotSubmitting():\n",
@@ -102,42 +102,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "katpLGf8TMh_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d26ab218-1c4e-4aa6-b70b-e7658a5b48f5"
+        "id": "katpLGf8TMh_"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  PassengerId HomePlanet CryoSleep  Cabin  Destination   Age    VIP  \\\n",
-            "0     0001_01     Europa     False  B/0/P  TRAPPIST-1e  39.0  False   \n",
-            "1     0002_01      Earth     False  F/0/S  TRAPPIST-1e  24.0  False   \n",
-            "2     0003_01     Europa     False  A/0/S  TRAPPIST-1e  58.0   True   \n",
-            "3     0003_02     Europa     False  A/0/S  TRAPPIST-1e  33.0  False   \n",
-            "4     0004_01      Earth     False  F/1/S  TRAPPIST-1e  16.0  False   \n",
-            "\n",
-            "   RoomService  FoodCourt  ShoppingMall     Spa  VRDeck               Name  \\\n",
-            "0          0.0        0.0           0.0     0.0     0.0    Maham Ofracculy   \n",
-            "1        109.0        9.0          25.0   549.0    44.0       Juanna Vines   \n",
-            "2         43.0     3576.0           0.0  6715.0    49.0      Altark Susent   \n",
-            "3          0.0     1283.0         371.0  3329.0   193.0       Solam Susent   \n",
-            "4        303.0       70.0         151.0   565.0     2.0  Willy Santantines   \n",
-            "\n",
-            "   Transported  \n",
-            "0        False  \n",
-            "1         True  \n",
-            "2        False  \n",
-            "3        False  \n",
-            "4         True  \n",
-            "['0001' '0002' '0003' ... '9278' '9279' '9280']\n",
-            "['01' '02' '03' '04' '05' '06' '07' '08']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# We might want to mount a shared google drive so we don't have to reupload\n",
         "# everytime the session expires\n",
@@ -152,15 +119,6 @@
         "\n",
         "if testSubmission:\n",
         "    data = pd.read_csv(test_filename)\n",
-        "\n",
-        "print(data.head())\n",
-        "l, r = [], []\n",
-        "for p in data[\"PassengerId\"]:\n",
-        "  l_, r_ = p.split(\"_\")\n",
-        "  l.append(l_)\n",
-        "  r.append(r_)\n",
-        "print(np.unique(l))\n",
-        "print(np.unique(r))\n",
         "\n",
         "# FEATURE MODIFICATION SETTINGS\n",
         "splitPassengerId = True # Set to true to generate two new features from the passengerId data\n",
@@ -732,8 +690,21 @@
         "scalar = sk.preprocessing.StandardScaler().fit(X=X_train)\n",
         "# Don't want to change the original values\n",
         "XT_train = scalar.transform(X=X_train)\n",
-        "XT_test = scalar.transform(X=X_test)\n"
+        "XT_test = scalar.transform(X=X_test)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "XT_submission = None\n",
+        "if testSubmission:\n",
+        "  XT_submission = scalar.transform(X_test.drop(columns=[\"PassengerId\"]))"
+      ],
+      "metadata": {
+        "id": "E0-wQ-p7R4T0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -762,7 +733,7 @@
       "execution_count": null,
       "metadata": {
         "id": "QYtZYHoPN73Y",
-        "outputId": "5457cfd4-c79c-42f4-8ef4-92569ac5db18",
+        "outputId": "dd164a64-7814-4878-94b8-2855b85561b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -774,28 +745,28 @@
           "text": [
             "---------------------------------Mutual Information-------------------------------------\n",
             "Model: KNeighborsClassifier(n_jobs=-1, n_neighbors=40)\n",
-            "Mutual Information\n",
+            "Mutual Information bestK=9\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.80      0.79      0.79      3230\n",
-            "           1       0.79      0.81      0.80      3289\n",
+            "           1       0.80      0.80      0.80      3289\n",
             "\n",
             "    accuracy                           0.80      6519\n",
             "   macro avg       0.80      0.80      0.80      6519\n",
             "weighted avg       0.80      0.80      0.80      6519\n",
             "\n",
-            "Testing Data\n",
+            "Testing Data bestK=8\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.79      0.75      0.77      1085\n",
-            "           1       0.76      0.80      0.78      1089\n",
+            "           0       0.80      0.77      0.78      1085\n",
+            "           1       0.78      0.80      0.79      1089\n",
             "\n",
-            "    accuracy                           0.77      2174\n",
-            "   macro avg       0.78      0.77      0.77      2174\n",
-            "weighted avg       0.78      0.77      0.77      2174\n",
+            "    accuracy                           0.79      2174\n",
+            "   macro avg       0.79      0.79      0.79      2174\n",
+            "weighted avg       0.79      0.79      0.79      2174\n",
             "\n",
             "Model: SVC()\n",
-            "Mutual Information\n",
+            "Mutual Information bestK=10\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.80      0.80      0.80      3230\n",
@@ -805,18 +776,18 @@
             "   macro avg       0.80      0.80      0.80      6519\n",
             "weighted avg       0.80      0.80      0.80      6519\n",
             "\n",
-            "Testing Data\n",
+            "Testing Data bestK=9\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.80      0.75      0.77      1085\n",
-            "           1       0.77      0.81      0.79      1089\n",
+            "           0       0.79      0.78      0.78      1085\n",
+            "           1       0.78      0.79      0.79      1089\n",
             "\n",
             "    accuracy                           0.78      2174\n",
             "   macro avg       0.78      0.78      0.78      2174\n",
             "weighted avg       0.78      0.78      0.78      2174\n",
             "\n",
             "Model: LinearSVC(dual=False, max_iter=5000, penalty='l1')\n",
-            "Mutual Information\n",
+            "Mutual Information bestK=10\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.79      0.77      0.78      3230\n",
@@ -826,18 +797,18 @@
             "   macro avg       0.78      0.78      0.78      6519\n",
             "weighted avg       0.78      0.78      0.78      6519\n",
             "\n",
-            "Testing Data\n",
+            "Testing Data bestK=8\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.78      0.75      0.77      1085\n",
-            "           1       0.76      0.79      0.78      1089\n",
+            "           0       0.77      0.76      0.77      1085\n",
+            "           1       0.77      0.78      0.77      1089\n",
             "\n",
             "    accuracy                           0.77      2174\n",
             "   macro avg       0.77      0.77      0.77      2174\n",
             "weighted avg       0.77      0.77      0.77      2174\n",
             "\n",
             "Model: GaussianNB()\n",
-            "Mutual Information\n",
+            "Mutual Information bestK=1\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.67      0.87      0.76      3230\n",
@@ -847,7 +818,7 @@
             "   macro avg       0.74      0.72      0.72      6519\n",
             "weighted avg       0.74      0.72      0.72      6519\n",
             "\n",
-            "Testing Data\n",
+            "Testing Data bestK=1\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.66      0.87      0.75      1085\n",
@@ -858,7 +829,7 @@
             "weighted avg       0.73      0.71      0.70      2174\n",
             "\n",
             "Model: BernoulliNB()\n",
-            "Mutual Information\n",
+            "Mutual Information bestK=4\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.81      0.70      0.75      3230\n",
@@ -868,7 +839,7 @@
             "   macro avg       0.78      0.77      0.77      6519\n",
             "weighted avg       0.78      0.77      0.77      6519\n",
             "\n",
-            "Testing Data\n",
+            "Testing Data bestK=4\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.81      0.67      0.73      1085\n",
@@ -879,25 +850,25 @@
             "weighted avg       0.76      0.75      0.75      2174\n",
             "\n",
             "Model: SGDClassifier(loss='perceptron', max_iter=5000, n_jobs=-1)\n",
-            "Mutual Information\n",
+            "Mutual Information bestK=6\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.86      0.65      0.74      3230\n",
-            "           1       0.72      0.90      0.80      3289\n",
+            "           0       0.78      0.69      0.74      3230\n",
+            "           1       0.73      0.81      0.77      3289\n",
             "\n",
-            "    accuracy                           0.78      6519\n",
-            "   macro avg       0.79      0.78      0.77      6519\n",
-            "weighted avg       0.79      0.78      0.77      6519\n",
+            "    accuracy                           0.75      6519\n",
+            "   macro avg       0.76      0.75      0.75      6519\n",
+            "weighted avg       0.76      0.75      0.75      6519\n",
             "\n",
-            "Testing Data\n",
+            "Testing Data bestK=6\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.86      0.62      0.72      1085\n",
-            "           1       0.70      0.90      0.79      1089\n",
+            "           0       0.78      0.68      0.73      1085\n",
+            "           1       0.72      0.81      0.76      1089\n",
             "\n",
-            "    accuracy                           0.76      2174\n",
-            "   macro avg       0.78      0.76      0.75      2174\n",
-            "weighted avg       0.78      0.76      0.76      2174\n",
+            "    accuracy                           0.74      2174\n",
+            "   macro avg       0.75      0.74      0.74      2174\n",
+            "weighted avg       0.75      0.74      0.74      2174\n",
             "\n"
           ]
         }
@@ -908,6 +879,10 @@
         "# Create set of models to estimate on\n",
         "model_estimators = [KNeighborsClassifier(n_neighbors=40, n_jobs=-1), SVC(kernel=\"rbf\", gamma=\"scale\"),\n",
         "                    LinearSVC(dual=False, penalty=\"l1\", max_iter=5000), GaussianNB(), BernoulliNB(), SGDClassifier(loss=\"perceptron\", max_iter=5000, n_jobs=-1)]\n",
+        "\n",
+        "# TEMP\n",
+        "fittedTransformer = None\n",
+        "fittedModel = None\n",
         "\n",
         "# Select the best features based on mutual information score from the training data,\n",
         "#  then transform XT_train and XT_test into the new subset of selected features\n",
@@ -935,6 +910,11 @@
         "        train_predictions = miEst.predict(X=MI_X_train)\n",
         "        test_predictions = miEst.predict(X=MI_X_test)\n",
         "\n",
+        "        # TEMP\n",
+        "        if type(model) == SVC and k == 10:\n",
+        "          fittedTransformer = mutual_information_transformer\n",
+        "          fittedModel = miEst\n",
+        "\n",
         "        mse_MI = mean_squared_error(y_true=y_train, y_pred=train_predictions)\n",
         "        mse_test = mean_squared_error(y_true=y_test, y_pred=test_predictions)\n",
         "        if (mse_MI < lowest_mse_MI):\n",
@@ -946,10 +926,44 @@
         "            lowest_mse_test = mse_test\n",
         "            best_predictions_test = test_predictions\n",
         "\n",
-        "    print(\"Mutual Information\")\n",
+        "    print(f\"Mutual Information bestK={best_k_MI}\")\n",
         "    print(classification_report(y_true=y_train, y_pred=best_predictions_MI))\n",
-        "    print(\"Testing Data\")\n",
+        "    print(f\"Testing Data bestK={best_k_test}\")\n",
         "    print(classification_report(y_true=y_test, y_pred=best_predictions_test))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if testSubmission:\n",
+        "  MI_submission = fittedTransformer.transform(XT_submission)\n",
+        "  submissionPreds = fittedModel.predict(MI_submission)\n",
+        "  outData = pd.DataFrame()\n",
+        "  outData[\"PassengerId\"] = X_test[\"PassengerId\"]\n",
+        "  outData[\"Transported\"] = submissionPreds.astype(bool)\n",
+        "  outData.to_csv(\"results.csv\", index=False)"
+      ],
+      "metadata": {
+        "id": "Qc0niyuHQzJp",
+        "outputId": "3c1ab1b7-1923-4682-a14c-3db7bf0911bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  PassengerId  Transported\n",
+            "0     0013_01         True\n",
+            "1     0018_01        False\n",
+            "2     0019_01         True\n",
+            "3     0021_01         True\n",
+            "4     0023_01        False\n"
+          ]
+        }
       ]
     },
     {
